# fhirlighter

./: Cargo.toml  README.md
examples/: patient.json
src/: lib.rs  main.rs
src/evaluator/: engine.rs  error.rs  evaluation_utils.rs  mod.rs  utils.rs
src/evaluator/functions/: array_functions.rs  mod.rs
src/lexer/: token.rs  tokenizer.rs
src/parser/: ast.rs  grammar.rs
tests/: test_basics.rs  test_misc_accessor.rs
