[package]
name = "emberpath-rs"
version = "0.1.0"
edition = "2024"
description = "A FHIRPath expression parser and evaluator implemented in Rust"
license = "MIT"
repository = "https://github.com/yourusername/emberpath-rs"
keywords = ["fhir", "fhirpath", "parser", "healthcare", "json"]
categories = ["parsing", "healthcare"]

# Support both library and binary usage
[lib]
name = "emberpath_rs"
path = "src/lib.rs"

[[bin]]
name = "emberpath-rs"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"