[package]
name = "fhirlighter"
version = "0.1.0"
edition = "2024"
description = "A FHIRPath expression parser and evaluator implemented in Rust"
license = "MIT"
repository = "https://github.com/mackles/fhirlighter"
keywords = ["fhir", "fhirpath", "parser", "healthcare", "json"]
categories = ["parsing", "healthcare"]

# Support both library and binary usage
[lib]
name = "fhirlighter"
path = "src/lib.rs"

[[bin]]
name = "fhirlighter"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
time = { version = "0.3", features = ["parsing"]  }

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
strip = true
lto = true